[gd_scene load_steps=9 format=2]

[ext_resource path="res://Background.png" type="Texture" id=1]
[ext_resource path="res://Stoneborn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battle.gd" type="Script" id=3]
[ext_resource path="res://Player.png" type="Texture" id=4]
[ext_resource path="res://Monospace.tres" type="Theme" id=5]
[ext_resource path="res://InfoBoxCyan.tscn" type="PackedScene" id=6]
[ext_resource path="res://BattleScreen.gd" type="Script" id=7]
[ext_resource path="res://InfoBoxRed.png" type="Texture" id=8]

[node name="Node2D" type="Node2D" groups=["World"]]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 392, 392 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 1.125, 1.125 )

[node name="LeftA" type="Node2D" parent="." groups=["Place"]]
position = Vector2( 328, 616 )

[node name="Stoneborn2" parent="LeftA" groups=["Creature"] instance=ExtResource( 2 )]

[node name="LeftB" type="Node2D" parent="." groups=["Place"]]
position = Vector2( 264, 848 )

[node name="Stoneborn" parent="LeftB" groups=["Creature"] instance=ExtResource( 2 )]

[node name="RightA" type="Node2D" parent="." groups=["Place"]]
position = Vector2( 1592, 616 )
scale = Vector2( -1, 1 )

[node name="Stoneborn2" parent="RightA" groups=["Creature"] instance=ExtResource( 2 )]

[node name="RightB" type="Node2D" parent="." groups=["Place"]]
position = Vector2( 1656, 848 )
scale = Vector2( -1, 1 )

[node name="Stoneborn" parent="RightB" groups=["Creature"] instance=ExtResource( 2 )]

[node name="UI" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 7 )

[node name="LeftA" parent="UI" instance=ExtResource( 6 )]

[node name="LeftB" parent="UI" instance=ExtResource( 6 )]
anchor_left = 0.3
anchor_right = 0.3

[node name="RightA" parent="UI" instance=ExtResource( 6 )]
anchor_left = 0.7
anchor_right = 0.7
texture = ExtResource( 8 )

[node name="RightB" parent="UI" instance=ExtResource( 6 )]
anchor_left = 0.9
anchor_right = 0.9
texture = ExtResource( 8 )

[node name="CreatureMenu" type="Control" parent="UI"]
visible = false
theme = ExtResource( 5 )

[node name="Attack" type="Button" parent="UI/CreatureMenu"]
margin_top = -24.0
margin_right = 128.0
margin_bottom = 24.0
theme = ExtResource( 5 )
text = "Attack"

[node name="MoveList" type="Control" parent="UI/CreatureMenu"]
visible = false
margin_left = 128.0
margin_top = -24.0
margin_right = 128.0
margin_bottom = -24.0
theme = ExtResource( 5 )

[node name="Move0" type="Button" parent="UI/CreatureMenu/MoveList"]
margin_right = 256.0
margin_bottom = 48.0
theme = ExtResource( 5 )
text = "Move0"

[node name="Move1" type="Button" parent="UI/CreatureMenu/MoveList"]
margin_top = 48.0
margin_right = 256.0
margin_bottom = 96.0
theme = ExtResource( 5 )
text = "Move1"

[node name="Move2" type="Button" parent="UI/CreatureMenu/MoveList"]
margin_top = 96.0
margin_right = 256.0
margin_bottom = 144.0
theme = ExtResource( 5 )
text = "Move2"

[node name="Move3" type="Button" parent="UI/CreatureMenu/MoveList"]
margin_top = 144.0
margin_right = 256.0
margin_bottom = 192.0
theme = ExtResource( 5 )
text = "Move3"
